Commit del Hero

--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <title>Fernando Baladi</title>
 </head>
 <body>
+    <header>
+        <div class="menu">
+            <div class="contenedor">
+                    <p class="logo">Hosting Company</p>
+                    <img src="imagenes/menu.png" class="menu-icon" alt="">
+                    <nav>
+                        <ul>
+                        <li><a href="">Hero</a></li>
+                        <li><a href="">Portafolio</a></li>
+                        <li><a href="">Acerca de mí</a></li>
+                        <li><a href="">Habilidades y destrezas</a></li>
+                        <li><a href="">Información de Contacto</a></li>
+                        </ul>
+                    </nav>
+                </div>    
+        </div>
+    </header>
+    <div class="imagen">
+            <img src="Bienvenido a mi página.png">
+    </div>
     
+
+    <script src="main.js"></script>
 </body>
 </html>
