Commit inicial sobre el Portafolio

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     <nav>
                         <ul>
                         <li><a href="">Hero</a></li>
-                        <li><a href="">Portafolio</a></li>
-                        <li><a href="">Acerca de mí</a></li>
+                        <li><a href="#Portafolio">Portafolio</a></li>
+                        <li><a href="#cerca">Acerca de mí</a></li>
                         <li><a href="">Habilidades y destrezas</a></li>
                         <li><a href="">Información de Contacto</a></li>
                         </ul>
@@ -29,8 +29,44 @@
     <div class="imagen">
             <img src="Bienvenido a mi página.png">
     </div>
+    <h1 id="Portafolio">Portafolio</h1>
+    <div class="portafolio">
+        <div class="proyecto">
+            <div class="proyecto_columna">
+                <p class="titulo_proyecto">Facebook</p>
+                <p class="descripción_proyecto">Este fue mi primer proyecto, lo hice con un pana que conocí en la uni, le decíamos Zucky, él y yo dijimos que necesitábamos conectar más gente entre ellas y bueno, así fue como nació Facebook, lo lanzamos en 2004.
+                    Igual fue bastante interesante el principio porque tuvimos que hacer grandes bases de datos, porque todos los universitarios querían entrar. Pero como la Big Data es lo mío, no tuvimos problema.
+                </p>
+                <img src="face.jpg" width="150" height="90">
+                <p></p>                
+                <a href="facebook.com">Haz click aquí para ver la asombrosa página que creé</a>
+            </div>
+            <div class="proyecto_columna">
+                <p class="titulo_proyecto">Snapchat</p>
+                <p class="descripción_proyecto">
+                    Después de que me separé de Zuky 
+                </p>
+                <p>
+                    La última ejecución del proyecto fue en marzo del 2019 cuando fue entregado.
+                </p>
+                <img src="battleship.svg" width="80" height="80">                
+            </div>
+            <div class="proyecto_columna">
+                <p class="titulo_proyecto">Battle ship</p>
+                <p class="descripción_proyecto">Este fue mi primer proyecto, programado en Java con el IDE de Netbeans a principios del 2019.
+                    El proyecto consistió en un juego de BattleShip el cual se jugaba con la computadora y se imprimía en la consola, el mismo
+                    iba mostrando según la dificultad, ciertos poderes. Dicho proyecto se basó en la programación dedicada a objetos donde los
+                        barcos heredaban de una clase padre la mayoría de sus atributos.
+                </p>
+                <p>
+                    La última ejecución del proyecto fue en marzo del 2019 cuando fue entregado.
+                </p>
+                <img src="battleship.svg" width="80" height="80">
+                             
+            </div>
+        </div>
+    </div>
     
-
     <script src="main.js"></script>
 </body>
 </html>
