Commit definitivo portafolio

--- a/index.html
+++ b/index.html
@@ -44,24 +44,22 @@
             <div class="proyecto_columna">
                 <p class="titulo_proyecto">Snapchat</p>
                 <p class="descripción_proyecto">
-                    Después de que me separé de Zuky 
+                    Después de que me separé de Zucky en Facebook, quise desarrollar mi propia plataforma donde la interacción fuese más directa, así que empecé Snapchat únicamente como plataforma móvil.
+                    La lancé en 2011 y la tuve que desarrollar Java porque quería aprender ese lenguaje de programación. Por otro lado, la técnica comunicativa se basaba en algo instantáneo, que se borraba después de ser visto. 
+                    La idea fue un éxito, pero cuando Zucky vio lo que hice, quiso él también agregarlo a su nueva aplicación, Instagram. En fin, me gustó mucho desarrollarlo.
                 </p>
-                <p>
-                    La última ejecución del proyecto fue en marzo del 2019 cuando fue entregado.
-                </p>
-                <img src="battleship.svg" width="80" height="80">                
+                <img src="snap.png" width="80" height="80">    
+                <p></p>
+                <a href="https://www.snapchat.com/l/es/download">Descarga mi proyecto aquí</a>            
             </div>
             <div class="proyecto_columna">
-                <p class="titulo_proyecto">Battle ship</p>
-                <p class="descripción_proyecto">Este fue mi primer proyecto, programado en Java con el IDE de Netbeans a principios del 2019.
-                    El proyecto consistió en un juego de BattleShip el cual se jugaba con la computadora y se imprimía en la consola, el mismo
-                    iba mostrando según la dificultad, ciertos poderes. Dicho proyecto se basó en la programación dedicada a objetos donde los
-                        barcos heredaban de una clase padre la mayoría de sus atributos.
+                <p class="titulo_proyecto">Proyecto Pixar</p>
+                <p class="descripción_proyecto">Después de que Zucky me fastidió un poco SnapChat, quise dedicarme al desarrollo web, donde fui contratado por Ed Catmull, fundador de Pixar para que le hiciera una página web.
+                    Al final se la hice al estilo Pixar, lo más creativo posible, mostrando mis dotes como artista, plasmé ahí la mejor página web que nunca se ha creado.
                 </p>
-                <p>
-                    La última ejecución del proyecto fue en marzo del 2019 cuando fue entregado.
-                </p>
-                <img src="battleship.svg" width="80" height="80">
+                <img src="pixar.png" width="180" height="100">
+                <p></p>
+                <a href="https://www.pixar.com/">Aquí verás la mejor página web jamás creada</a>
                              
             </div>
         </div>
