commit sobre mí

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
         </div>
     </header>
     <div class="imagen">
-            <img src="Bienvenido a mi página.png">
+            <img id="myImg" src="Bienvenido a mi página.png">
     </div>
+   
     <h1 id="Portafolio">Portafolio</h1>
     <div class="portafolio">
         <div class="proyecto">
@@ -64,7 +65,29 @@
             </div>
         </div>
     </div>
-    
+    <h1 id="cerca">Acerca de mí</h1>
+    <div class="general">
+        <div class="acerca_de_mi">
+            <p>Mi nombre es Fernando Michel Baladi Tahan. Actualmente empecé a cursar el septimo trimestre de Ingeniería de Sistemas en la Universidad Metropolitana 
+            mi meta al corto plazo es graduarme, mientras que desarrollo cierta aplicaciones por mi cuenta, las cuales pienso que cambiarán al mundo.</p>
+            <p>
+                Por otra parte, mi largo plazo lo veo ya con una empresa estable y creciendo, apostando indudablemente por mi país y mi gente.
+            </p>
+            <p>
+                Entre tantas cosas, me gustan los cubos rubik, tengo una colección variada de ellos, te generan una gran capacidad de hablar.
+                Una de las cosas que más me motiva es la Pachamama, la madre naturaleza, cada vez que me encuentro un paisaje hermoso busco retratarlo e inspirarme de él.
+                Otra cosa que me inspira es solucionar grandes problemas. Siento que al final del día se podrá llegar a mejorar exponencialmente cualquier situación.
+            </p>
+        </div>
+        <div class="mi_imagen">
+            <img id="hermoso" src="20190910_190119.jpeg" width="400" height="400">
+        </div>
+    </div>
+    <div id="miModal" class="modal">
+        <span class="cerrar">&times;</span>
+        <img class="modal_contenido" id="img01">
+        <div id="caption"></div>
+      </div>
     <script src="main.js"></script>
 </body>
 </html>
