commit del contáctanos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <li><a href="#Portafolio">Portafolio</a></li>
                         <li><a href="#cerca">Acerca de mí</a></li>
                         <li><a href="#habilidades">Habilidades y destrezas</a></li>
-                        <li><a href="">Información de Contacto</a></li>
+                        <li><a href="#contacto">Información de Contacto</a></li>
                         </ul>
                     </nav>
                 </div>    
@@ -161,6 +161,20 @@
             <p>
                 100/100
             </p>
+        </div>
+    </div>
+    
+    <h1 class="título" id="contacto">Información de contacto</h1>
+    <div class="contenedor_bajo">
+        <div class="contenedor_nuevo">
+            <p>Si quieres contactarme, puedes hacerlo por mi correo fernandobaladit@gmail.com o por mis redes sociales.
+                Si haces click en el de WhatsApp, empezarás un chat directo conmigo.
+            <ul>
+                <li><a href="https://www.instagram.com/fernandobaladi/" target="_blank"><img src="Instagram.png">  Instagram</a></li>
+                <li><a href="https://www.facebook.com/fernando.baladiT"  target="_blank"><img src="facebook.png">  Facebook</a></li>
+                <li><a href="https://wa.me/584241643254"  target="_blank"><img src="whatsapp.png">  WhatsApp</a></li>
+                <li><a href="https://twitter.com/fernandobaladi" target="_blank"><img src="twitter.png">  Twitter</a></li>
+            </ul>
         </div>
     </div>
     <script src="main.js"></script>
