--- a/index.html
+++ b/index.html
@@ -177,6 +177,9 @@
             </ul>
         </div>
     </div>
+    <div id="top">
+        <a href="#myImg"><img src="top.png"></a>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
